# KTaskManager

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
doc/: ChangeLog.md
src/: k_task_manager.c  k_task_manager.h
tests/: test.c
